kubernetes/components/traefik/traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jupyterhub
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      imagePullSecrets:
        - name: regcred
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: registry1.dso.mil/ironbank/opensource/traefik/traefik:v2.9.1
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
            - name: websecure
              containerPort: 443
          volumeMounts:
            - name: traefik-cfg
              mountPath: /etc/traefik/traefik.toml
              subPath: file-from-cfgmap
            - name: traefik-cfg-dynamic
              mountPath: /etc/traefik/traefik_dynamic.yml
              subPath: file-from-cfgmap
            - name: traefik-certs-files
              mountPath: /etc/traefik/certs
      volumes:
        - name: traefik-certs-files
          secret:
            secretName: tls-certs
        - name: traefik-cfg-dynamic
          configMap:
            name: traefik-config-dynamic
        - name: traefik-cfg
          configMap:
            name: traefik-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: jupyterhub
  name: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    - protocol: TCP
      port: 443
      name: websecure
      targetPort: 443
    - protocol: TCP
      port: 8080
      name: dashboard
      targetPort: 8080
  clusterIP: "10.96.30.9"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: jupyterhub
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    ingress.kubernetes.io/protocol: https
spec:
  rules:
    - host: traefik-k8.10.96.30.9.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  name: dashboard
